# general-tele-bot-rust

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: cmd_handles.rs  main.rs  msg_handles.rs  ollama_ops.rs  states.rs
src/cmd_handles/: ollama_ops.rs
